objects/User.object
<CustomObject>
    <fields>
        <fullName>Account_Approver__c</fullName>
        <label>Account Approver</label>
        <relationshipName>Approver</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <color>#009900</color>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#3333FF</color>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>APAC</fullName>
                    <color>#CC6600</color>
                    <label>APAC</label>
                </value>
                <value>
                    <fullName>LA</fullName>
                    <color>#990000</color>
                    <label>LA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deactivation_Date__c</fullName>
        <description>Populated via workflow when User is marked inactive; reset when user is reactivated</description>
        <label>Deactivation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Five9__Five9AgentId__c</fullName>
        <label>Five9 Agent Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Agent_Login_TimeStamp__c</fullName>
        <label>Five9Agent Login TimeStamp</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hire_Date__c</fullName>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Officer_Number__c</fullName>
        <description>This field is manually populated. It is optional. This field is used to specify a unique number assigned to the user (officer).</description>
        <label>Officer Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Secured_Individual_Lending_Authority__c</fullName>
        <description>This field is manually populated. It is optional. This field is used to specify the amount (currency) of the user&apos;s secured lending authority.</description>
        <label>Secured Individual Lending Authority</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Unsecured_Individual_Lending_Authority__c</fullName>
        <description>This field is manually populated. It is optional. This field is used to specify the amount (currency) of the user&apos;s unsecured lending authority.</description>
        <label>Unsecured Individual Lending Authority</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__nCino_User__c</fullName>
        <description>This field is automatically populated as enabled. This field indicates whether the user has a license for the nCino Platform or not.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>nCino User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Browser_Login_Date__c</fullName>
        <label>Last Browser Login Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lending_Branch__c</fullName>
        <label>Lending Branch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager_Name_SFDC2__c</fullName>
        <formula>IF(ISBLANK(ManagerId), &quot;&quot;,  Manager.FirstName + &quot; &quot; + Manager.LastName)</formula>
        <label>Manager Name SFDC2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_ID__c</fullName>
        <label>Owner ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Power_of_One__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power of One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Termination_Date_if_applicable__c</fullName>
        <label>Termination Date (if applicable)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trained_SFDC2__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>All new users should receive training and sign-off from their management that they were properly trained in the new business processes established for Salesforce and they have the proper training to use the system.</inlineHelpText>
        <label>Trained?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_has_seen_Login_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Box that will be checked once user has seen login flow</description>
        <label>User has seen Login Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_AutoLogin__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto Login</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_Extension__c</fullName>
        <description>Obsolete, use the custom field Agent Phone Extension</description>
        <label>obsolete</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_ID__c</fullName>
        <label>Agent Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_MobileAgent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_MobileMode__c</fullName>
        <label>Mobile Agent Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CALL_BY_CALL</fullName>
                </value>
                <value>
                    <fullName>NAILED_CONNECTION</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cnx__Agent_MobileNumber__c</fullName>
        <label>Mobile Agent Dial Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_PasswordEncrypted__c</fullName>
        <label>Agent Password</label>
        <length>127</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_Password__c</fullName>
        <label>obsolete</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_Phone_Extension__c</fullName>
        <label>Agent Extension</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_SpeedDialNumbers__c</fullName>
        <description>A list of names and numbers that will be added to the speed dial list.</description>
        <label>Speed Dial Numbers</label>
        <length>1060</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>credit_approval__c</fullName>
        <label>Credit Approval</label>
        <relationshipName>Users</relationshipName>
        <restrictedAdminField>true</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>et4ae5__Default_ET_Page__c</fullName>
        <label>Default Marketing Cloud Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Default_MID__c</fullName>
        <label>Default MID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetUsername__c</fullName>
        <label>Marketing Cloud Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTarget_OAuth_Token__c</fullName>
        <label>@deprecated</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingAnonWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingAnonWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingBestBets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingBestBets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingEmailActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingEmailActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingGroupedWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingGroupedWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingInterestingMomentsList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingInterestingMomentsList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingScoringList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingScoringList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingStreamList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingStreamList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingWatchList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingWatchList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Insight_Counter__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Marketo Sales Insight Welcome Counter</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__InsideSales_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the user is an admin of the InsideSales system.</description>
        <label>InsideSales Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qbdialer__is_subdomain__c</fullName>
        <label>InsideSales Subdomain</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__is_token__c</fullName>
        <label>InsideSales Authorization Token</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__password__c</fullName>
        <label>InsideSales Password</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__permissions__c</fullName>
        <label>InsideSales Permissions</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>qbdialer__username__c</fullName>
        <label>InsideSales Username</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>JIGSAW_PROSPECTING_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Lending_Branch__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>Active_User_w_Lending_Branch</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Lending_Branch__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active User with Lending Branch</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>EMPLOYEE_NUMBER</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>IS_FROZEN</columns>
        <columns>Termination_Date_if_applicable__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>Business_Banking</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.DEPARTMENT</field>
            <operation>equals</operation>
            <value>Commercial Deposits,Small Business Deposits</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>Business</value>
        </filters>
        <label>Business Banking</label>
    </listViews>
    <listViews>
        <fullName>C_I</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>startsWith</operation>
            <value>C&amp;I</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Enterprise User</value>
        </filters>
        <label>C&amp;I</label>
    </listViews>
    <listViews>
        <fullName>Commercial_Banking</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>specialty deposits,commercial</value>
        </filters>
        <label>Commercial Banking</label>
    </listViews>
    <listViews>
        <fullName>EQF</fullName>
        <booleanFilter>(1 OR 2 OR 4) AND 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.TITLE</field>
            <operation>contains</operation>
            <value>EQF,Equipment</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>EQF,Equipment</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>EQF,Equipment</value>
        </filters>
        <label>EQF</label>
    </listViews>
    <listViews>
        <fullName>ExactTarget_Users</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>et4ae5__ExactTargetForAppExchangeUser__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>ExactTarget Users</label>
    </listViews>
    <listViews>
        <fullName>Factoring</fullName>
        <booleanFilter>(1 OR 2 OR 4) AND 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.TITLE</field>
            <operation>contains</operation>
            <value>factoring</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>factoring</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>factoring</value>
        </filters>
        <label>Factoring</label>
    </listViews>
    <listViews>
        <fullName>HRB</fullName>
        <booleanFilter>(1 AND 2) OR 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>IS_FROZEN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.DIVISION</field>
            <operation>equals</operation>
            <value>Data Validation,Research and Information</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>HRB</value>
        </filters>
        <label>HRB</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HRB_Ubiquity</fullName>
        <booleanFilter>((1 AND 2) OR 3) AND 4</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>IS_FROZEN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.DIVISION</field>
            <operation>equals</operation>
            <value>Data Validation,Research and Information</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>HRB</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>contains</operation>
            <value>ubiquitygs.com</value>
        </filters>
        <label>HRB (Ubiquity)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Homebuilder</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>JIGSAW_PROSPECTING_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Lending_Branch__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>HBD,homebuilder</value>
        </filters>
        <label>Homebuilder</label>
    </listViews>
    <listViews>
        <fullName>IPL_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>IPL</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>IPL Users</label>
        <sharedTo>
            <role>EVP_Chief_Lending_Officer</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LLC_BI__ActiveUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>New_User_Training_Validation</fullName>
        <active>true</active>
        <description>SFDC2: When a new Enterprise user is created, the Training checkbox must be checked to verify that the user has received training on processes prior to access to the system</description>
        <errorConditionFormula>AND(
  Profile.Name = &quot;Enterprise User&quot;,
  ISNEW(),
  NOT(Trained_SFDC2__c)
)</errorConditionFormula>
        <errorDisplayField>Trained_SFDC2__c</errorDisplayField>
        <errorMessage>All new users should receive training and sign-off from their management that they were properly trained in the new business processes established for Salesforce and they have the proper training to use the system.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>User_Department_Division_Populated</fullName>
        <active>true</active>
        <description>SFDC2: The user must have a Department and Division defined</description>
        <errorConditionFormula>AND(
  IsActive,
  Profile.Name = &quot;Enterprise User&quot;, 
  OR(
    ISBLANK(Department),
    ISBLANK(Division)
  )
)</errorConditionFormula>
        <errorDisplayField>Department</errorDisplayField>
        <errorMessage>The user&apos;s Department and Division must be populated prior to saving</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>User_Manager_Populated</fullName>
        <active>true</active>
        <description>This user must have a Manager defined</description>
        <errorConditionFormula>AND(
  Profile.Name = &quot;Enterprise User&quot;,
  IsActive,
  ISBLANK(ManagerId)
)</errorConditionFormula>
        <errorDisplayField>ManagerId</errorDisplayField>
        <errorMessage>The user must have a Manager defined</errorMessage>
    </validationRules>
</CustomObject>